--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,7 @@ nav {
   list-style: none;
   width: 50%;
   height: 100%;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   margin-left: auto;
 }
